# agin-tv

./: .gitignore  .prettierrc.json  Cargo.toml  Dockerfile  README.md  compose-dev.yaml  compose.yaml
api/: .gitignore  Cargo.toml  Dockerfile
api/src/: _routes.rs  axum_error.rs  database.rs  init.rs  main.rs  middlewares.rs  models.rs  mongo_id.rs  routes.rs  settings.rs  state.rs  tmdb_configuration.rs
api/src/middlewares/: mod.rs  require_auth.rs  session_bearer_override.rs
api/src/models/: movie.rs
api/src/routes/: auth.rs  health.rs  home.rs  mod.rs  movies.rs  search.rs
api/src/routes/auth/: login.rs  mod.rs  start_session.rs  user.rs
api/src/routes/movies/: mod.rs  movie_id.rs
desktop/: BUILD.md  README.md  package.json  pnpm-lock.yaml  test-app.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/src/: App.tsx  config.ts  main.tsx  routeTree.gen.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/resources/: agin-tv-launcher.sh  agin-tv.desktop  oauth.html
desktop/src-tauri/src/: commands.rs  helpers.rs  lib.rs  main.rs  oidc.rs  state.rs
desktop/src/components/Carousel/: controls.tsx  index.tsx
desktop/src/components/Carousel/Slide/: index.tsx
desktop/src/components/SearchResults/: index.tsx
desktop/src/components/SplashScreen/: SplashSection.tsx  index.tsx
desktop/src/components/ui/: searchbar.tsx
desktop/src/components/welcome/: index.tsx  logging-in.tsx
desktop/src/lib/atoms/: token.ts
desktop/src/lib/constants/: names.ts
desktop/src/lib/providers/: api.ts  useApi.ts
desktop/src/routes/: __root.tsx  error.tsx  index.tsx  welcome.tsx
desktop/src/routes/app/: route.tsx
desktop/src/routes/app/home/: index.tsx  route.tsx
desktop/src/routes/app/movie/: $movieId.tsx
desktop/src/types/: api-simple.ts  api.d.ts
tmdb/: Cargo.toml  README.md
tmdb/.openapi-generator/: FILES
tmdb/src/: lib.rs
tmdb/src/apis/: configuration.rs  default_api.rs  mod.rs
tmdb/src/models/: account_details_200_response.rs  account_details_200_response_avatar.rs  account_details_200_response_avatar_gravatar.rs  account_details_200_response_avatar_tmdb.rs  account_favorite_tv_200_response.rs  account_favorite_tv_200_response_results_inner.rs  account_get_favorites_200_response.rs  account_get_favorites_200_response_results_inner.rs  account_lists_200_response.rs  account_lists_200_response_results_inner.rs  account_rated_movies_200_response.rs  account_rated_movies_200_response_results_inner.rs  account_rated_tv_200_response.rs  account_rated_tv_200_response_results_inner.rs  account_rated_tv_episodes_200_response.rs  account_rated_tv_episodes_200_response_results_inner.rs  account_watchlist_movies_200_response.rs  account_watchlist_movies_200_response_results_inner.rs  account_watchlist_tv_200_response.rs  account_watchlist_tv_200_response_results_inner.rs  alternative_names_copy_200_response.rs  alternative_names_copy_200_response_logos_inner.rs  authentication_create_guest_session_200_response.rs  authentication_create_request_token_200_response.rs  authentication_create_session_200_response.rs  authentication_create_session_from_login_200_response.rs  authentication_create_session_from_v4_token_200_response.rs  authentication_delete_session_200_response.rs  authentication_validate_key_200_response.rs  authentication_validate_key_401_response.rs  certification_movie_list_200_response.rs  certification_movie_list_200_response_certifications.rs  certification_movie_list_200_response_certifications_ar_inner.rs  certification_movie_list_200_response_certifications_au_inner.rs  certification_movie_list_200_response_certifications_bg_inner.rs  certification_movie_list_200_response_certifications_br_inner.rs  certification_movie_list_200_response_certifications_ca_inner.rs  certification_movie_list_200_response_certifications_ca_qc_inner.rs  certification_movie_list_200_response_certifications_ch_inner.rs  certification_movie_list_200_response_certifications_de_inner.rs  (+721 more)
