[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
color-eyre = "0.6.4"
dotenvy = "0.15.7"
mongodb = "3.2.4"
reqwest = { version = "0.12.22", features = ["rustls-tls", "http2", "charset", "json", "multipart"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full", "tokio", "tracing"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }