[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tmdb = { path = "../tmdb" }
async-trait = "0.1.88"
axum = { version = "0.8.6", features = ["macros", "tracing"] }
axum-oidc = { git = "https://github.com/pfzetto/axum-oidc.git", branch = "pfzetto" }
color-eyre = "0.6.4"
config = "0.15.12"
dotenvy = "0.15.7"
mongodb = "3.2.4"
openidconnect = { version = "4.0.1", default-features = false, features = [
    "reqwest",
    "rustls-tls",
    "timing-resistant-secret-traits",
] }
reqwest = { version = "0.12.22", features = ["rustls-tls", "http2", "charset", "json", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full", "tokio", "tracing"] }
tower-http = { version = "0.6.2", features = ["cors", "tracing"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
http = "1.3.1"
http-serde-ext = "1.0.2"
toml = "0.9.0"
tower-sessions = "0.14.0"
tower-sessions-redis-store = "0.16.0"
serde_json = "1.0.140"
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }

partial_struct = "0.4.5"
visible = "0.0.1"
serde_derive = "1.0.219"
chrono = "0.4.41"
bson = { version = "2.15.0", features = ["chrono", "chrono-0_4"] }
futures = "0.3.31"
fred = { version = "10.1.0", features = ["enable-rustls-ring", "partial-tracing", "replicas", "serde_json", "tracing-futures"] }
ws = "0.9.2"
